# po

./: .gitignore  CODEX_START_HERE.md  README.md
adrs/: ADR-001-independent-digital-twin.md  ADR-002-local-sqlserver-csv.md  ADR-003-fastapi-sqlmodel.md  ADR-004-modular-monolith.md  ADR-005-event-store-current-state.md  ADR-006-no-ai-v1.md  ADR-007-hybrid-optimizer-no-ai.md  (+3 more)
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: health.py  main.py
backend/app/core/: config.py  db.py  errors.py
backend/app/modules/dashboard/: router.py  schemas.py  service.py
backend/app/modules/events/: models.py  router.py  schemas.py  service.py
backend/app/modules/import_factory/: router.py  schemas.py  service.py
backend/app/modules/master_data/: models.py  router.py
backend/app/modules/materials/: models.py  router.py  schemas.py  service.py
backend/app/modules/optimizer/: models.py  router.py  schemas.py  service.py
backend/app/modules/qc_ncr/: models.py  router.py  schemas.py  service.py
backend/app/modules/resources/: models.py  router.py  schemas.py  service.py
backend/app/modules/risk/: models.py  router.py  schemas.py  service.py
backend/app/modules/scenarios/: models.py  router.py  schemas.py  service.py
backend/app/modules/simulation/: models.py  router.py  schemas.py  service.py
backend/import_data/: .gitignore
backend/import_data/source_db_docs/: PROJECT_CANONICAL_CONTEXT.md  turbine_production_ai_target_state_fa (1).md  turbine_production_system_knowledge_fa (1).md
backend/scripts/: repair_import_data.py
logs/: CHANGELOG.md  (+5 more)
(+97 files in other folders)
